Remove usage of deprecated code